// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:button should render default correctly 1`] = `
<div>
  <button
    class="sc-bczRLJ ekYIRc"
  >
    Children
  </button>
</div>
`;

exports[`components:button should render secondary correctly 1`] = `
<div>
  <button
    class="sc-bczRLJ XzVzj"
  >
    Children
  </button>
</div>
`;
